--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,25 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   change_app_package_name: ^1.2.0
+  hexcolor: ^3.0.1
+  flutter_launcher_icons: ^0.13.1
+  flutter_sound: ^9.4.20
+  firebase_auth: ^5.0.0
+  google_sign_in: ^6.2.1
+  firebase_core: ^3.0.0
+  cloud_firestore: ^5.0.1
+  get: ^4.6.6
+  lottie: ^3.1.2
+  agora_rtc_engine: ^6.3.2
 
 dev_dependencies:
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/AppIcon.jpg"
+  min_sdk_android: 21 
+
   flutter_test:
     sdk: flutter
 
@@ -47,6 +64,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -60,8 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,10 +95,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: GBold
+      fonts:
+        - asset: fonts/Gilroy-Bold.ttf
+    - family: GMedium
+      fonts:
+        - asset: fonts/Gilroy-Medium.ttf    
+    - family: GRegular
+      fonts:
+        - asset: fonts/Gilroy-Regular.ttf   
+    - family: GSemiBold
+      fonts:
+        - asset: fonts/Gilroy-SemiBold.ttf          
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
