--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   cloud_firestore: ^5.0.1
   get: ^4.6.6
   lottie: ^3.1.2
-  agora_rtc_engine: ^6.3.2
+  agora_rtc_engine: ^6.3.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
 
