--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   lottie: ^3.1.2
   agora_rtc_engine: ^6.3.1
   permission_handler: ^11.3.1
-
+  device_preview: ^1.2.0
+  pull_down_button: ^0.9.4
+  animated_emoji: ^3.1.0
 dev_dependencies:
 
 flutter_launcher_icons:
