--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   animated_emoji: ^3.1.0
   connectivity_plus: ^6.0.3
   cloud_functions: ^5.0.1
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.0
+  firebase_app_check: ^0.3.0+2
 dev_dependencies:
 
 flutter_launcher_icons:
