--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,8 +1,12 @@
 pluginManagement {
     def flutterSdkPath = {
         def properties = new Properties()
-        file("local.properties").withInputStream { properties.load(it) }
-        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        def propertiesFile = new File(settingsDir.parentFile, 'local.properties')
+        if (propertiesFile.exists()) {
+            propertiesFile.withReader('UTF-8') { reader -> properties.load(reader) }
+        }
+
+        def flutterSdkPath = properties.getProperty('flutter.sdk')
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
     }()
@@ -14,15 +18,20 @@ pluginManagement {
         mavenCentral()
         gradlePluginPortal()
     }
+
+    plugins {
+        id 'com.android.application' version '8.11.0'
+        id 'com.android.library' version '8.11.0'
+        id 'org.jetbrains.kotlin.android' version '1.9.0'
+        id 'com.google.gms.google-services' version '4.3.15'
+    }
 }
 
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "7.3.0" apply false
-    // START: FlutterFire Configuration
+    id "com.android.application" version "8.11.0" apply false
+    id "org.jetbrains.kotlin.android" version "1.9.0" apply false
     id "com.google.gms.google-services" version "4.3.15" apply false
-    // END: FlutterFire Configuration
-    id "org.jetbrains.kotlin.android" version "1.7.10" apply false
 }
 
-include ":app"
+include ':app'
