--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
+  },
   "dependencies": {
-    "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.13.2",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.5.0",
     "agora-access-token": "^2.0.4"
   },
   "engines": {
-    "node": "14"
-  }
+    "node": "18"
+  },
+  "private": true
 }
