--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,17 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/AppIcon.jpg"
-  min_sdk_android: 21 
+  image_path: "assets/Logo.png"
+  min_sdk_android: 24 
+
+
 
   flutter_test:
     sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
+  # activated in the `analysis_options.yaml` file locateds at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
