--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,16 @@ dependencies:
   image_picker: ^1.1.2
   firebase_storage: ^12.1.0
   firebase_app_check: ^0.3.0+2
+  flutter_svg: ^2.0.9
 dev_dependencies:
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/Logo.png"
+  image_path: "assets/Logo.jpeg"
   min_sdk_android: 24 
+
+  
 
 
 
@@ -75,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/gifts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
